--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ title or "LoL Worlds Dashboard" }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{{ url_for('static', path='styles.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body class="body-dark">
 <header class="topbar">
