--- a/templates/index.html
+++ b/templates/index.html
@@ -269,7 +269,7 @@
                 <div class="flex items-center justify-between">
                   <div class="flex items-center space-x-4">
                     <div class="text-sm">
-                      <div class="font-bold text-white">Match #{{ loop.index }}</div>  <!-- Mostrar el número de la partida -->
+                      <div class="font-bold text-white">Match #{{ loop.index }}</div>
                       <div class="text-xs text-gray-400">{{ match.stage }}</div>
                     </div>
                   </div>
