--- a/templates/index.html
+++ b/templates/index.html
@@ -281,17 +281,17 @@
                 <tbody>
                   {% for team in equipos %}
                   <tr class="border-b border-gray-800 match-row">
-                    <td class="py-3 px-4 font-semibold text-white">{{ team.name }}</td>
-                    <td class="py-3 px-4 text-gray-300">{{ team.region }}</td>
+                    <td class="py-3 px-4 font-semibold text-white">{{ team['name'] }}</td>
+                    <td class="py-3 px-4 text-gray-300">{{ team['region'] }}</td>
                     <td class="py-3 px-4">
-                      <span class="text-secondary font-bold">{{ team.wins }}W</span>
+                      <span class="text-secondary font-bold">{{ team['wins'] }}W</span>
                       <span class="text-gray-500"> / </span>
-                      <span class="text-red-400 font-bold">{{ team.losses }}L</span>
+                      <span class="text-red-400 font-bold">{{ team['losses'] }}L</span>
                     </td>
-                    <td class="py-3 px-4 text-gray-300">{{ "%.1f"|format(team.win_rate) }}%</td>
-                    <td class="py-3 px-4 text-accent">{{ "%.2f"|format(team.avg_kda) }}</td>
-                    <td class="py-3 px-4 text-gray-300">{{ team.avg_duration }}</td>
-                    <td class="py-3 px-4 text-gray-400 text-xs">{{ team.favorite_champions or "-" }}</td>
+                    <td class="py-3 px-4 text-gray-300">{{ "%.1f"|format(team['win_rate']) }}%</td>
+                    <td class="py-3 px-4 text-accent">{{ "%.2f"|format(team['avg_kda']) }}</td>
+                    <td class="py-3 px-4 text-gray-300">{{ team['avg_duration'] }}</td>
+                    <td class="py-3 px-4 text-gray-400 text-xs">{{ team['favorite_champions'] or "-" }}</td>
                   </tr>
                   {% endfor %}
                 </tbody>
