--- a/templates/index.html
+++ b/templates/index.html
@@ -167,6 +167,10 @@
                 Esta vista está conectada a tu API de FastAPI con base de datos PostgreSQL en Render.
               </p>
 
+              <div class="mb-4">
+                <img src="/static/img/77970_10152151413760556_1922913272_o.webp" alt="League of Legends Worlds" class="w-full h-48 object-cover rounded-lg border border-gray-700">
+              </div>
+
               <div class="flex flex-wrap gap-3 text-xs">
                 <span class="px-3 py-1 rounded-full bg-gray-900 border border-gray-700">
                   <i class="fas fa-database mr-1 text-primary"></i> Render PostgreSQL
@@ -243,6 +247,10 @@
               </table>
             </div>
           </div>
+
+          <div class="bg-darker border border-gray-800 rounded-xl p-6 mt-6">
+            <img src="/static/img/6902e31fd6a5a.webp" alt="League of Legends Champions" class="w-full h-64 object-cover rounded-lg border border-gray-700">
+          </div>
         </section>
 
         <!-- TAB: EQUIPOS -->
@@ -297,6 +305,10 @@
                 </tbody>
               </table>
             </div>
+          </div>
+
+          <div class="bg-darker border border-gray-800 rounded-xl p-6 mt-6">
+            <img src="../static/img/equipos-clasificados.jpg" alt="Equipos Clasificados Mundial 2024" class="w-full h-auto object-contain rounded-lg">
           </div>
         </section>
 
