--- a/templates/index.html
+++ b/templates/index.html
@@ -308,7 +308,7 @@
           </div>
 
           <div class="bg-darker border border-gray-800 rounded-xl p-6 mt-6">
-            <img src="../static/img/equipos-clasificados.jpg" alt="Equipos Clasificados Mundial 2024" class="w-full h-auto object-contain rounded-lg">
+            <img src="/static/img/1imagen.jpg" alt="Equipos Clasificados Mundial 2024" class="w-full h-auto object-contain rounded-lg">
           </div>
         </section>
 
