--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>LoL Worlds Dashboard</title>
+  <link rel="icon" type="image/x-icon" href="/static/img/image3.jfif">
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
